<resources>
    <string name="app_name">MAD_MiniProject</string>
    <string name="bankTitle">Bank Management System</string>
    //Home main
    <string name="btnAccount">Account</string>
    <string name="btnBillPayment">Bill Payment</string>
    <string name="btnLoan">Loan</string>
    <string name="btnMoneyTransfer">Money Transfer</string>
    //admin main
    <string name="adminMain">Admin Home</string>
    //Account main
    <string name="btnAccountSummary">Account Summary</string>
    <string name="btnAccountDetails">Account Details</string>
    <string name="btnAccountActivity">Account Activity</string>
    <string name="btnAddAccount">Add Account</string>

    <string name="balance">Balance</string>
    <string name="balanceAmount"></string>
    <string name="selectAccount">Select Account</string>
    <string name="addMemeber">Add Member</string>
    <string name="addUserAccount">Add User Account</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="signIn">Sign In</string>
    <string name="forgetPassword">Forget Password!!</string>
    <string name="updatePwd">Update Password</string>
    <string name="cancel">Cancel</string>
    <string name="ownAccount">My Own Account</string>
    <string name="otherAccount">Other Account</string>
    <string name="transfer">Transfer</string>
    <string name="btnDone">Done</string>
    <string name="applay">Apply</string>
    <string name="change">Change</string>
    <string name="btnLogout">Logout</string>
    <string name="btnChanePwd">Change Password</string>

    <!--Array List-->
    <string-array name="accType">
        <item>Choose...</item>
        <item>Saving Account</item>
        <item>Current Account</item>
    </string-array>

    <string-array name="relationship">
        <item>Choose...</item>
        <item>Single</item>
        <item>Joint</item>
    </string-array>

    <string-array name="currency">
        <item>LKR</item>
        <item>USD</item>
        <item>EUR</item>
        <item>AUD</item>
        <item>GBP</item>
    </string-array>

    <string-array name="billerList">
        <item>Choose...</item>
        <item>Dialog</item>
        <item>Mobitel</item>
        <item>Hutch</item>
        <item>Airtel</item>
        <item>SLT</item>
        <item>Lanka Bell</item>
        <item>CEB</item>
        <item>Water Board</item>
    </string-array>

    <string-array name="loanType">
        <item>Choose...</item>
        <item>Education Loan</item>
        <item>Home Loan</item>
        <item>Personal Loan</item>
        <item>Business Loan</item>
    </string-array>
    <string-array name="loanDuration">
        <item>Choose...</item>
        <item>03 months</item>
        <item>06 months</item>
        <item>09 months</item>
        <item>12 months</item>
        <item>18 months</item>
        <item>24 months</item>
        <item>36 months</item>
        <item>48 months</item>
        <item>60 months</item>
    </string-array>
</resources>
